# codes

./: README.md  ipr_piecewise.csv  oil_ipr.py  pyproject.toml
oil_ipr/: __init__.py  cli.py  models.py
